// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrFulfillmentTile > applies checked state 1`] = `
<div
  aria-checked="true"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > applies disabled state 1`] = `
<div
  aria-checked="false"
  aria-disabled="true"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > applies loading state 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="true"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > applies multiple states 1`] = `
<div
  aria-checked="true"
  aria-disabled="true"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="true"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > base classes only 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > default snapshot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > renders body slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <div
          class="cdr-fulfillment-tile__main"
        >
          <div
            class="cdr-body"
            style="--cdr-body-font-size: var(--cdr-type-scale--2); --cdr-body-line-height: calc(var(--cdr-type-scale--2) * var(--cdr-body-line-height-ratio)); --cdr-body-font-weight: 400;"
          >
            
            <!-- @slot Default font size is a step down. Placed just below the header. -->
            
            Body Content
            
            
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > renders footer slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <!--v-if-->
        <div
          class="cdr-fulfillment-tile__main"
        >
          <!--v-if-->
          <div
            class="cdr-body"
            style="--cdr-body-font-size: var(--cdr-type-scale--1); --cdr-body-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-body-line-height-ratio)); --cdr-body-font-weight: 400;"
          >
            
            <!-- @slot Footer content will be at the bottom of the component. -->
            
            Footer Content
            
            
          </div>
        </div>
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > renders header slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <div
          class="cdr-fulfillment-tile__header"
        >
          <!--v-if-->
          <div>
            <span
              class="cdr-subheading-sans"
              strong="true"
              style="--cdr-subheading-sans-font-size: var(--cdr-type-scale--1); --cdr-subheading-sans-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-subheading-sans-line-height-ratio));"
            >
              
              <!-- @slot Header content that is still visible during loading. -->
              
              Header Content
              
              
            </span>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > renders icon-left slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <div
          class="cdr-fulfillment-tile__header"
        >
          <span
            class="cdr-fulfillment-tile-header__icon"
          >
            <!-- @slot Icon to display on the left of the header. -->
            
            <span
              data-testid="left-icon"
            >
              Icon
            </span>
            
          </span>
          <div>
            <span
              class="cdr-subheading-sans"
              strong="true"
              style="--cdr-subheading-sans-font-size: var(--cdr-type-scale--1); --cdr-subheading-sans-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-subheading-sans-line-height-ratio));"
            >
              
              <!-- @slot Header content that is still visible during loading. -->
              
              Header Content
              
              
            </span>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrFulfillmentTile > renders icon-right slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection cdr-fulfillment-tile"
  data-border-radius="soft"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      <div
        class="cdr-fulfillment-tile__content"
      >
        <div
          class="cdr-fulfillment-tile__header"
        >
          <!--v-if-->
          <div>
            <span
              class="cdr-subheading-sans"
              strong="true"
              style="--cdr-subheading-sans-font-size: var(--cdr-type-scale--1); --cdr-subheading-sans-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-subheading-sans-line-height-ratio));"
            >
              
              <!-- @slot Header content that is still visible during loading. -->
              
              Header Content
              
              
            </span>
          </div>
          <span
            class="cdr-fulfillment-tile-header__icon"
          >
            <!-- @slot Icon to display on the right of the header. -->
            
            <span
              data-testid="right-icon"
            >
              Icon
            </span>
            
          </span>
        </div>
        <!--v-if-->
      </div>
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;
